--- a/core/server/config/env/config.production.json
+++ b/core/server/config/env/config.production.json
@@ -1,12 +1,10 @@
 {
     "database": {
-        "client": "mysql",
+        "client": "sqlite3",
         "connection": {
-            "host"     : "127.0.0.1",
-            "user"     : "root",
-            "password" : "",
-            "database" : "ghost"
-        }
+            "filename": "content/data/ghost-prod.db"
+        },
+        "debug": false
     },
     "paths": {
         "contentPath": "content/"
@@ -16,6 +14,9 @@
         "rotation": {
             "enabled": true
         },
-        "transports": ["file", "stdout"]
+        "transports": [
+            "file",
+            "stdout"
+        ]
     }
 }
