--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "main": "./core/index",
   "scripts": {
+    "postinstall":"npm bin && knex-migrator init",
     "start": "node index",
     "dev": "DEBUG=ghost:* grunt dev",
     "test": "grunt validate --verbose",
@@ -127,7 +128,8 @@
     "should-http": "0.1.1",
     "sinon": "1.17.7",
     "supertest": "3.0.0",
-    "tmp": "0.0.33"
+    "tmp": "0.0.33",
+    "knex-migrator": "2.1.6"
   },
   "greenkeeper": {
     "ignore": [
