--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "engines": {
     "node": "8.9.0 || ^6.9.5",
-    "npm": "5.5.1",
+    "npm": "^5.6.0",
     "cli": "^1.3.0"
   },
   "dependencies": {
